# kicad-vault

./: .gitignore  bom.py  html_gen.py  main.py  pyproject.toml  readme.md  requirements.txt
img/: logo.xcf
src/kicad_vault/: bom.py  html_gen.py  main.py
