[project]
name = "kicad-vault"
version = "0.0.1"
authors = [
  { name="Ryan Walker", email="walker@interruptlabs.ca" },
]

description = "A program to manage kicad BOMs, with vendor integration."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "xmltodict",
    "tabulate",
    "digikey-api",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/o7-machinehum/kicad-vault"
"Bug Tracker" = "https://github.com/o7-machinehum/kicad-vault/issues"

[project.scripts]
kicad-vault = "kicad_vault.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
